# datcord-rs

./: Cargo.toml  README.md  README_CRATES.md
src/: commands.rs  encryption.rs  lib.rs  main.rs  webhook.rs
tests/: api.rest
