[package]
name = "discord-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"

rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "91f6288", features = ["json"] }

reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

tokio = { version = "1.27.0", features = ["macros"] }
