[package]
name = "datcord"
version = "0.1.0"
edition = "2021"
authors = ["lesar"]
description = "A high-level Discord API wrapper"
license = "MIT"

[lib]
name = "datcord"
path = "src/lib.rs"



[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"

rocket = { version = "=0.5.0-rc.3", git = "https://github.com/SergioBenitez/Rocket", rev = "91f6288", features = ["json"] }

reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"

ed25519-dalek = "1.0.1"
hex = "0.4.3"
